[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/Node_Sprite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NN_Node_Display.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Node_Sprite.bmp" type="BitMap" id=3]
[ext_resource path="res://Assets/Themes/default.tres" type="Theme" id=4]

[node name="NN_Node_Display" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="NN_Node_Sprite" type="Sprite" parent="."]
position = Vector2( 64, 64 )
texture = ExtResource( 1 )

[node name="Node_Collision" type="TextureButton" parent="."]
margin_left = -0.529755
margin_top = 1.5892
margin_right = 127.47
margin_bottom = 129.589
input_pass_on_modal_close_click = false
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
texture_click_mask = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Centralizer" type="MarginContainer" parent="."]
margin_right = 128.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num_Label" type="RichTextLabel" parent="Centralizer"]
use_parent_material = true
margin_top = 55.0
margin_right = 128.0
margin_bottom = 73.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 7
size_flags_vertical = 6
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]aaaaa"
text = "aaaaa"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Node_Collision" to="." method="_on_Node_Collision_button_down"]
[connection signal="button_up" from="Node_Collision" to="." method="_on_Node_Collision_button_up"]
[connection signal="gui_input" from="Node_Collision" to="." method="_on_Node_Collision_gui_input"]
[connection signal="mouse_entered" from="Node_Collision" to="." method="_on_Node_Collision_mouse_entered"]
[connection signal="mouse_exited" from="Node_Collision" to="." method="_on_Node_Collision_mouse_exited"]
